--- a/gb/25/5/6/n14501059.md
+++ b/gb/25/5/6/n14501059.md
@@ -31,12 +31,12 @@
 <p>“中共一直在耍流氓，用TikTok、也包括电影电视剧，给海外的华人洗脑；把推特、Facebook、言论比较自由的一些媒体都给禁止了，这也是一种文化歧视，把一些比较自由的思想阻挡在海外。它也是不对等的。”</p>
 <p>责任编辑：郑浩宇#</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/5/5/n14499119.md#1">拯救好莱坞 川普下令对外国电影征100%关税</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/27/n14644041.md#1">新唐人油画大赛参赛人数和作品质量创新高</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/24/n14642233.md#1">中国知名婴童品牌被检出细菌超标48倍</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14641253.md#1">辽宁11岁男孩摆摊 知情人：6岁已辍学照顾病父</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645563.md#1">印尼苏门答腊岛洪灾救援困难 已致248人死</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645549.md#1">川普政府与西北大学达和解 恢复联邦补助</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645423.md#1">折扣带动黑五买气 网购强劲 实体店回温</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645425.md#1">组图：斯里兰卡暴雨酿重灾 123死130失踪</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/6/27/n11350548.md#1" target="_blank">王友群：陈独秀等10位中共党魁的最后结局</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/11/23/n10871086.md#1" target="_blank">绝处逢生 大陆法轮功学员谢师恩</a></li>
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/07/20/a102898210.md#1" target="_blank">美国务卿：中共迫害法轮功21年 必须停止</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/12/3/n9919603.md#1" target="_blank">王江火：“抗美援朝”不具备正义性</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/4/2/n11157870.md#1" target="_blank">中共强摘器官 芬兰议会九议员吁惩罚罪犯</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
