--- a/gb/25/4/3/n14474005.md
+++ b/gb/25/4/3/n14474005.md
@@ -14,12 +14,12 @@
 <p>网友说：“目前国足真正的排名亚洲20左右算正常。”“叙利亚都比不过，完蛋了。”“就像股票，没有最低只有更低。”“全球有197个主权国家，还有很多下降空间呢。”“只能说国足的上升空间还是很大的。”“排在后面的国家和地区都是非职业球员了吧？”</p>
 <p>责任编辑：任子君#</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645563.md#1">印尼苏门答腊岛洪灾救援困难 已致248人死</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645549.md#1">川普政府与西北大学达和解 恢复联邦补助</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645423.md#1">折扣带动黑五买气 网购强劲 实体店回温</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645425.md#1">组图：斯里兰卡暴雨酿重灾 123死130失踪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/11/n14549246.md#1">担忧被裁员 Z世代最不愿在职场使用AI</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/12/n14571859.md#1">从裁员到高校课程：AI改变职场与教育</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639479.md#1">华大人工智能计划获千万美元捐助</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639042.md#1">华州退休生活成本高居全美第五</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/20/n10232283.md#1" target="_blank">北虹：我心中的那道伤痕</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/13/1/23/n3784118.md#1" target="_blank">他山：中共政法委的罪恶与政法系统人员的赎罪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/15/n10219359.md#1" target="_blank">中共淫乱的前生今世（2）江氏“新时代”</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/10/n11248618.md#1" target="_blank">救母何惧强暴 正义存于人心</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
