--- a/gb/24/11/23/n14377270.md
+++ b/gb/24/11/23/n14377270.md
@@ -60,7 +60,7 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645423.md#1">折扣带动黑五买气 网购强劲 实体店回温</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645425.md#1">组图：斯里兰卡暴雨酿重灾 123死130失踪</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/8/25/n10666303.md#1" target="_blank">观雨堂主：大陆高校的“秘密信息员”</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/4/7/n10284039.md#1" target="_blank">中国良心教师们的故事（1）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/11/18/n9859787.md#1" target="_blank">杨宁：中南海内部电影与特供“内片”</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/11/9/n10841367.md#1" target="_blank">一群百岁老人绝处逢生的故事</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
