--- a/gb/24/11/14/n14371404.md
+++ b/gb/24/11/14/n14371404.md
@@ -38,12 +38,12 @@
 <li><span style="font-weight: bold; display: inline-block;"><a style="color: #0000ff;" href=><a href="https://github.com/1992513/djy/blob/master/gb/24/11/11/n14368942.md#1" target="_blank" rel="noopener">台湾3款泡面上榜亚洲十强 大陆无一款入围</a></span></li>
 </ul>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645563.md#1">印尼苏门答腊岛洪灾救援困难 已致248人死</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645549.md#1">川普政府与西北大学达和解 恢复联邦补助</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645423.md#1">折扣带动黑五买气 网购强劲 实体店回温</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645425.md#1">组图：斯里兰卡暴雨酿重灾 123死130失踪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14414940.md#1">农民工讨薪 厦门象屿集团动用高压水枪驱逐</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/6/n14568122.md#1">四川江油校园霸凌引发大规模抗议 海外声援</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/7/n14569378.md#1">【纪元焦点】白纸运动未远 江油抗争已起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/1/n14627448.md#1">海南国企偷砍农户槟榔树 引发警民冲突</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/4/10/n11176292.md#1" target="_blank">【征文】田园：《资治通鉴》中的传统智慧</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/3/n11232919.md#1" target="_blank">加拿大温莎市宣布 五月为该市法轮大法月</a></li>
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/07/20/a102898210.md#1" target="_blank">美国务卿：中共迫害法轮功21年 必须停止</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/10/n10207223.md#1" target="_blank">共产暴政录：儿子告发母亲致其母被处决</a></li><li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/12/12/28/n3763495.md#1" target="_blank">洪愿：告诉你真实的法轮功（一）</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
